<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Tela_Inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:hint="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:hint="@string/help_1"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="14dp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/listWifi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:divider="@null"

        android:dividerHeight="0dp"
        android:longClickable="false"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:id="@+id/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:hint="@string/wifi"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wifi_escolhido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:hint="@string/wifi_escolhido"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/button_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_enter" />

    <TextView
        android:id="@+id/help_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:hint="@string/help_2"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listWeb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:divider="@null"

        android:dividerHeight="0dp"
        android:longClickable="false"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:id="@+id/esp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:hint="@string/esp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/esp_escolhido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:hint="@string/esp_escolhido"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/button_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_config" />

</LinearLayout>

